--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -33,7 +45,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
@@ -58,10 +70,24 @@
 ================================= -->
 
     <!-- ===========================
-           Menu Part Start
+           Banner Part Start
 ================================= -->
+    <section
+      id="banner"
+      style="
+        background: url(./images/banner.jpg) no-repeat center;
+        background-size: cover;
+      "
+    >
+      <div class="container">
+        <div class="banner_text">
+          <h1>Kallol Pandit</h1>
+          <h2>Web Designer & Front-End Developer</h2>
+        </div>
+      </div>
+    </section>
     <!-- ===========================
-           Menu Part End
+           Banner Part End
 ================================= -->
 
     <!-- ===========================
