--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
       <div class="container">
         <div class="banner_text">
           <h1>Kallol Pandit</h1>
-          <h2>Web Designer & Front-End Developer</h2>
+          <!-- <h2>Web Designer & Front-End Developer</h2> -->
+          <div id="app"></div>
         </div>
       </div>
     </section>
@@ -104,6 +105,7 @@
        Menu Part End
 ================================= -->
     <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
