--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
           <h1>Kallol Pandit</h1>
           <!-- <h2>Web Designer & Front-End Developer</h2> -->
           <div id="app"></div>
+          <a href="file:///G:/Resume/Kallol%20pandit%20(Web%20Designer).pdf"
+            >Download Resume</a
+          >
         </div>
       </div>
     </section>
