--- a/index.html
+++ b/index.html
@@ -84,9 +84,6 @@
           <h1>Kallol Pandit</h1>
           <!-- <h2>Web Designer & Front-End Developer</h2> -->
           <div id="app"></div>
-          <a href="file:///G:/Resume/Kallol%20pandit%20(Web%20Designer).pdf"
-            >Download Resume</a
-          >
         </div>
       </div>
     </section>
@@ -95,10 +92,61 @@
 ================================= -->
 
     <!-- ===========================
-       Menu Part Start
+       About Part Start
 ================================= -->
+    <section id="about">
+      <div class="container">
+        <div class="about_details">
+          <img src="images/Kallol_Pandit.jpg" alt="Kallol" />
+          <div class="about_text">
+            <h3>About <span>Me</span></h3>
+            <p>
+              Hello! I'm Kallol Pandit. I'm a web designer, and I'm very
+              passionate and dedicated to my work. I have acquired the skills
+              and knowledge necessary to make your project a success. I enjoy
+              every step of the design process, from discussion and
+              collaboration.
+            </p>
+            <div class="web">
+              <ul>
+                <li>
+                  <a href="#"
+                    ><i class="fa-solid fa-circle-chevron-right"></i> Front-End
+                    Development</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><i class="fa-solid fa-circle-chevron-right"></i> Front-End
+                    Development</a
+                  >
+                </li>
+              </ul>
+              <ul>
+                <li>
+                  <a href="#"
+                    ><i class="fa-solid fa-circle-chevron-right"></i> Web
+                    Design</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><i class="fa-solid fa-circle-chevron-right"></i> Web
+                    Design</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="resume">
+              <a href="#">Download Resume</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="border"></div>
+    </section>
     <!-- ===========================
-       Menu Part End
+       About Part End
 ================================= -->
 
     <!-- ===========================
