--- a/index.html
+++ b/index.html
@@ -1,167 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Portfolio</title>
-    <link rel="stylesheet" href="css/all.min.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
 
-  <body>
-    <!-- ===========================
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Personal Portfolio</title>
+  <link rel="stylesheet" href="css/all.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+  <!-- ===========================
            Menu Part Start
 ================================= -->
-    <nav class="navbar navbar-expand-lg py-0 main_menu">
-      <div class="container">
-        <a class="navbar-brand" href="#">Kallol.</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
-          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Service</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
+  <nav class="navbar navbar-expand-lg py-0 main_menu">
+    <div class="container">
+      <a class="navbar-brand" href="#">Kallol.</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
+        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Service</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <!-- ===========================
+    </div>
+  </nav>
+  <!-- ===========================
            Menu Part End
 ================================= -->
 
-    <!-- ===========================
+  <!-- ===========================
            Banner Part Start
 ================================= -->
-    <section
-      id="banner"
-      style="
+  <section id="banner" style="
         background: url(./images/banner.jpg) no-repeat center;
         background-size: cover;
-      "
-    >
-      <div class="container">
-        <div class="banner_text">
-          <h1>Kallol Pandit</h1>
-          <!-- <h2>Web Designer & Front-End Developer</h2> -->
-          <div id="app"></div>
-        </div>
+      ">
+    <div class="container">
+      <div class="banner_text">
+        <h1>Kallol Pandit</h1>
+        <!-- <h2>Web Designer & Front-End Developer</h2> -->
+        <div id="app"></div>
       </div>
-    </section>
-    <!-- ===========================
+    </div>
+  </section>
+  <!-- ===========================
            Banner Part End
 ================================= -->
 
-    <!-- ===========================
+  <!-- ===========================
        About Part Start
 ================================= -->
-    <section id="about">
-      <div class="container">
-        <div class="about_details">
-          <img src="images/Kallol_Pandit.jpg" alt="Kallol" />
-          <div class="about_text">
-            <h3>About <span>Me</span></h3>
-            <p>
-              Hello! I'm Kallol Pandit. I'm a web designer, and I'm very
-              passionate and dedicated to my work. I have acquired the skills
-              and knowledge necessary to make your project a success. I enjoy
-              every step of the design process, from discussion and
-              collaboration.
-            </p>
-            <div class="web">
-              <ul>
-                <li>
-                  <a href="#"
-                    ><i class="fa-solid fa-circle-chevron-right"></i> Front-End
-                    Development</a
-                  >
-                </li>
-                <li>
-                  <a href="#"
-                    ><i class="fa-solid fa-circle-chevron-right"></i> Front-End
-                    Development</a
-                  >
-                </li>
-              </ul>
-              <ul>
-                <li>
-                  <a href="#"
-                    ><i class="fa-solid fa-circle-chevron-right"></i> Web
-                    Design</a
-                  >
-                </li>
-                <li>
-                  <a href="#"
-                    ><i class="fa-solid fa-circle-chevron-right"></i> Web
-                    Design</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="resume">
-              <a href="#">Download Resume</a>
-            </div>
+  <section id="about">
+    <div class="container">
+      <div class="about_details">
+        <img src="images/Kallol_Pandit.jpg" alt="Kallol" />
+        <div class="about_text">
+          <h3>About <span>Me</span></h3>
+          <p>
+            Hello! I'm Kallol Pandit. I'm a web designer, and I'm very
+            passionate and dedicated to my work. I have acquired the skills
+            and knowledge necessary to make your project a success. I enjoy
+            every step of the design process, from discussion and
+            collaboration.
+          </p>
+          <div class="web">
+            <ul>
+              <li>
+                <a href="#"><i class="fa-solid fa-chevron-right"></i> Front-End
+                  Development</a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-solid fa-chevron-right"></i> Front-End
+                  Development</a>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <a href="#"><i class="fa-solid fa-chevron-right"></i></i> Web
+                  Design</a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-solid fa-chevron-right"></i> Web
+                  Design</a>
+              </li>
+            </ul>
+          </div>
+          <div class="resume">
+            <a href="#">Download Resume</a>
           </div>
         </div>
       </div>
-      <div class="border"></div>
-    </section>
-    <!-- ===========================
+    </div>
+    <!-- <div class="border"></div> -->
+  </section>
+  <!-- ===========================
        About Part End
 ================================= -->
 
-    <!-- ===========================
+  <!-- ===========================
+       Portfolio Part Start
+================================= -->
+  <section id="portfolio">
+    <div class="container">
+      <div class="port_details">
+        <div class="port_text">
+          <h2>I have high skills in developing and programming</h2>
+          <p>I was doing everything in my power to provide me with all the experiences to provide cost-effective and
+            high quality service to satisfy my customers all over the world</p>
+        </div>
+        <div class="skills_details">
+          <div class="port_skill">
+            <div class="skills_items">
+              <div class="skills">
+                <p>HTML5</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="skills_items">
+              <div class="skills">
+                <p>CSS</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="skills_items">
+              <div class="skills">
+                <p>JavaScript</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="skills_items">
+              <div class="skills">
+                <p>BootStarp</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="port_skill">
+            <div class="skills_items">
+              <div class="skills">
+                <p>jQuery</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="skills_items">
+              <div class="skills">
+                <p> SASS</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="skills_items">
+              <div class="skills">
+                <p> Tailwind CSS</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="skills_items">
+              <div class="skills">
+                <p> React</p>
+              </div>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+  <!-- ===========================
+       Portfolio Part End
+================================= -->
+
+  <!-- ===========================
+       Freelance Part Start
+================================= -->
+  <!-- ===========================
+       Freelance Part End
+================================= -->
+
+  <!-- ===========================
        Menu Part Start
 ================================= -->
-    <!-- ===========================
+  <!-- ===========================
        Menu Part End
 ================================= -->
-    <script src="js/jquery-1.12.4.min.js"></script>
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/script.js"></script>
-  </body>
+  <script src="js/jquery-1.12.4.min.js"></script>
+  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+  </script>
+  <script src="js/script.js"></script>
+</body>
+
 </html>
