--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </ul>
           </div>
           <div class="resume">
-            <a href="#">Download Resume</a>
+            <a href="/resume/Kallol Pandit .pdf" download="Kallol Pandit.pdf">Download Resume</a>
           </div>
         </div>
       </div>
@@ -217,6 +217,15 @@
   <!-- ===========================
        Freelance Part Start
 ================================= -->
+<section id="freelance">
+  <div class="container">
+    <div class="free_details">
+      <h3 id="free"></h3>
+      <a href="#">Contact Me</a>
+      
+    </div>
+  </div>
+</section>
   <!-- ===========================
        Freelance Part End
 ================================= -->
