--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body>
+<body class="tutorial">
+  <!-- =========Mouse Move=========== -->
+  <main class="page">
+    <div class="page__inner">
+
+      <!-- The cursor elements -->
+      <div class="cursor cursor--small"></div>
+      <canvas class="cursor cursor--canvas" resize></canvas>
+
+    </div>
+  </main>
+  <!-- =========Mouse Move=========== -->
   <!-- ===========================
            Menu Part Start
 ================================= -->
@@ -142,7 +153,8 @@
                 <p>HTML5</p>
               </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
+                  aria-valuemax="100"></div>
               </div>
             </div>
             <div class="skills_items">
@@ -150,7 +162,8 @@
                 <p>CSS</p>
               </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0"
+                  aria-valuemax="100"></div>
               </div>
             </div>
             <div class="skills_items">
@@ -158,7 +171,8 @@
                 <p>JavaScript</p>
               </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="60" aria-valuemin="0"
+                  aria-valuemax="100"></div>
               </div>
             </div>
             <div class="skills_items">
@@ -166,7 +180,8 @@
                 <p>BootStarp</p>
               </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100"></div>
               </div>
             </div>
           </div>
@@ -176,7 +191,8 @@
                 <p>jQuery</p>
               </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100"></div>
               </div>
             </div>
             <div class="skills_items">
@@ -184,7 +200,8 @@
                 <p> SASS</p>
               </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100"></div>
               </div>
             </div>
             <div class="skills_items">
@@ -192,7 +209,8 @@
                 <p> Tailwind CSS</p>
               </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0"
+                  aria-valuemax="100"></div>
               </div>
             </div>
             <div class="skills_items">
@@ -200,7 +218,8 @@
                 <p> React</p>
               </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 55%;" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 55%;" aria-valuenow="55" aria-valuemin="0"
+                  aria-valuemax="100"></div>
               </div>
             </div>
           </div>
@@ -217,27 +236,91 @@
   <!-- ===========================
        Freelance Part Start
 ================================= -->
-<section id="freelance">
-  <div class="container">
-    <div class="free_details">
-      <h3 id="free"></h3>
-      <a href="#">Contact Me</a>
-      
+  <section id="freelance">
+    <div class="container">
+      <div class="free_details">
+        <h3 id="free"></h3>
+        <a href="#">Contact Me</a>
+
+      </div>
     </div>
-  </div>
-</section>
+  </section>
   <!-- ===========================
        Freelance Part End
 ================================= -->
 
   <!-- ===========================
-       Menu Part Start
+       Contact Part Start
 ================================= -->
+  <section id="contact">
+    <div class="container">
+      <div class="cont_details">
+        <div class="cont_text">
+          <h3>Get in <span>Touch</span></h3>
+          <p>Please fill out the form on this section to contact with me. Or call between 9:00 a.m. and 8:00 p.m.
+            Monday through Friday.</p>
+          <ul>
+            <li><i class="fa-solid fa-location-dot"></i> Address: <span>Tangail, Dhaka, Bangladesh</span> </li>
+
+            <li><i class="fa-solid fa-envelope"></i> Email: <a
+                href="mailto:kallolpandit466@gmail.com">kallolpandit466@gmail.com</a> </li>
+
+            <li><i class="fa-solid fa-phone"></i> Phone: <a href="tel:+8801765703895">+8801765703895</a> </li>
+
+            <li><i class="fa-brands fa-linkedin"></i>LinkedIn: <a href="https://www.linkedin.com/in/kallolpandit/"
+                target="_blank">https://www.linkedin.com/in/kallolpandit/</a> </li>
+
+            <li><i class="fa-brands fa-github"></i> GitHub: <a href="https://github.com/kallolpandit"
+                target="_blank">https://github.com/kallolpandit</a> </li>
+          </ul>
+        </div>
+        <div class="cont_form">
+          <form action="/action_page.php">
+            <input type="text" id="fname" name="firstname" placeholder="Name">
+            <input type="email" id="lname" placeholder="Email">
+            <textarea id="subject" name="subject" placeholder="Message" style="height:200px"></textarea>
+            <input type="submit" value="Send Message">
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- ===========================
-       Menu Part End
+       Contact Part End
+================================= -->
+
+  <!-- ===========================
+       Footer Part Start
+================================= -->
+  <footer id="footer">
+    <div class="container">
+      <div class="ocean">
+        <div class="wave">
+          <div class="footer_text">
+            <div class="logo">
+              <a href="#">Kallol.</a>
+            </div>
+            <ul>
+              <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            </ul>
+            <p>Copyright © 2023 - All right reserved by <span>Kallol Pandit</span></p>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </footer>
+  <!-- ===========================
+       Footer Part End
 ================================= -->
   <script src="js/jquery-1.12.4.min.js"></script>
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.0/paper-core.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
   </script>
