--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@
               <a href="#">Kallol.</a>
             </div>
             <ul>
-              <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+              <li><a href="https://www.facebook.com/profile.php?id=100003923992637" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/kallolpandit/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/kallolpandit" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+              <li><a href="https://www.instagram.com/kallol_pandit/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
             </ul>
             <p>Copyright © 2023 - All right reserved by <span>Kallol Pandit</span></p>
           </div>
