--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <a class="navbar-brand" href="#">Kallol.</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <i class="fa-solid fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
         <ul class="navbar-nav m-auto mb-2 mb-lg-0">
