--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Personal Portfolio</title>
   <link rel="stylesheet" href="css/all.min.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -110,7 +111,7 @@
                 collaboration.
               </p>
               <div class="web">
-                <ul>
+                <ul data-aos="zoom-in-right">
                   <li>
                     <a href="#"><i class="fa-solid fa-chevron-right"></i> Front-End
                       Development</a>
@@ -120,7 +121,7 @@
                       Development</a>
                   </li>
                 </ul>
-                <ul>
+                <ul data-aos="zoom-in-left">
                   <li>
                     <a href="#"><i class="fa-solid fa-chevron-right"></i></i> Web
                       Design</a>
@@ -159,7 +160,7 @@
                 high quality service to satisfy my customers all over the world</p>
             </div>
             <div class="skills_details">
-              <div class="port_skill">
+              <div class="port_skill" data-aos="fade-right">
                 <div class="skills_items">
                   <div class="skills">
                     <p>HTML5</p>
@@ -197,7 +198,7 @@
                   </div>
                 </div>
               </div>
-              <div class="port_skill">
+              <div class="port_skill" data-aos="fade-left">
                 <div class="skills_items">
                   <div class="skills">
                     <p>jQuery</p>
@@ -272,7 +273,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="cont_details">
-            <div class="cont_text">
+            <div class="cont_text" data-aos="fade-right">
               <h3>Get in <span>Touch</span></h3>
               <p>Please fill out the form on this section to contact with me. Or call between 9:00 a.m. and 8:00 p.m.
                 Monday through Friday.</p>
@@ -291,7 +292,7 @@
                     target="_blank">https://github.com/kallolpandit</a> </li>
               </ul>
             </div>
-            <div class="cont_form">
+            <div class="cont_form" data-aos="fade-left">
               <form action="/action_page.php">
                 <input type="text" id="fname" name="firstname" placeholder="Name">
                 <input type="email" id="lname" placeholder="Email">
@@ -315,7 +316,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="footer_text">
+          <div class="footer_text"  data-aos="fade-up">
             <div class="logo">
               <a href="#">Kallol.</a>
             </div>
@@ -338,6 +339,10 @@
        Footer Part End
 ================================= -->
   <script src="js/jquery-1.12.4.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.0/paper-core.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
