--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="footer_text"  data-aos="fade-up">
+          <div class="footer_text"  data-aos="zoom-in">
             <div class="logo">
               <a href="#">Kallol.</a>
             </div>
