--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
       </button>
       <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
         <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <li class="nav-item ">
+            <a class="nav-link active " aria-current="page" href="#banner">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+          <li class="nav-item ">
+            <a class="nav-link " href="#about">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
+          <li class="nav-item ">
+            <a class="nav-link " href="#portfolio">Portfolio</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Service</a>
+          <li class="nav-item ">
+            <a class="nav-link " href="#service">Service</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+          <li class="nav-item ">
+            <a class="nav-link " href="#contact">Contact</a>
           </li>
         </ul>
       </div>
