--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
     </div>
   </main>
   <!-- =========Mouse Move=========== -->
+
+  <!-- ========Page Loader========= -->
+  <div id="preloader">
+    <div id="loader"></div>
+  </div>
+  <!-- ========Page Loader========= -->
+
   <!-- ===========================
            Menu Part Start
 ================================= -->
@@ -67,8 +74,8 @@
   <!-- ===========================
            Menu Part End
 ================================= -->
-<!-- ========Back To Top======== -->
-<button class="backtotop"><i class="fa-solid fa-arrow-up"></i></button>
+  <!-- ========Back To Top======== -->
+  <button class="backtotop"><i class="fa-solid fa-arrow-up"></i></button>
   <!-- ===========================
            Banner Part Start
 ================================= -->
@@ -166,8 +173,8 @@
                     <p>HTML5</p>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95"
+                      aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
                 <div class="skills_items">
@@ -175,8 +182,8 @@
                     <p>CSS</p>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="80"
+                      aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
                 <div class="skills_items">
@@ -184,8 +191,8 @@
                     <p>JavaScript</p>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="60" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="60"
+                      aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
                 <div class="skills_items">
@@ -193,8 +200,8 @@
                     <p>BootStarp</p>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75"
+                      aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
               </div>
@@ -204,8 +211,8 @@
                     <p>jQuery</p>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75"
+                      aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
                 <div class="skills_items">
@@ -213,8 +220,8 @@
                     <p> SASS</p>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75"
+                      aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
                 <div class="skills_items">
@@ -222,8 +229,8 @@
                     <p> Tailwind CSS</p>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75"
+                      aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
                 <div class="skills_items">
@@ -231,8 +238,8 @@
                     <p> React</p>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 55%;" aria-valuenow="55" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 55%;" aria-valuenow="55"
+                      aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
               </div>
@@ -252,12 +259,12 @@
   <section id="freelance">
     <div class="container">
       <!-- <div class="row"> -->
-        <!-- <div class="col-lg-12"> -->
-          <div class="free_details">
-            <h3 id="free"></h3>
-            <a href="#">Contact Me</a>
-          </div>
-        <!-- </div> -->
+      <!-- <div class="col-lg-12"> -->
+      <div class="free_details">
+        <h3 id="free"></h3>
+        <a href="#">Contact Me</a>
+      </div>
+      <!-- </div> -->
       <!-- </div> -->
     </div>
   </section>
@@ -316,7 +323,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="footer_text"  data-aos="zoom-in">
+          <div class="footer_text" data-aos="zoom-in">
             <div class="logo">
               <a href="#">Kallol.</a>
             </div>
