--- a/index.html
+++ b/index.html
@@ -272,6 +272,25 @@
        Freelance Part End
 ================================= -->
 
+<!-- =============================
+       Service Part Start
+  =============================== -->
+  <section id="service">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="service_text">
+            <h3>Recent Project</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<!-- =============================
+       Service Part End
+  =============================== -->
+
   <!-- ===========================
        Contact Part Start
 ================================= -->
@@ -322,8 +341,8 @@
   <footer id="footer">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
-          <div class="footer_text" data-aos="zoom-in">
+        <div class="col-lg-12" >
+          <div class="footer_text" >
             <div class="logo">
               <a href="#">Kallol.</a>
             </div>
