--- a/index.html
+++ b/index.html
@@ -281,6 +281,71 @@
         <div class="col-lg-12">
           <div class="service_text">
             <h3>Recent Project</h3>
+            <a href="#">View All <span><i class="fa-solid fa-arrow-right"></i></span></a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="project_items">
+            <img src="images/Pack & Go.png" alt="Pack & Go">
+            <div class="project_text">
+              <h4>Pack & Go</h4>
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>jQuery</li>
+                <li>BootStarp</li>
+                <li>JavaScript</li>
+              </ul>
+              <h5>Details</h5>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat eaque velit nobis architecto maiores beatae, sunt exercitationem reprehenderit voluptate placeat?</p>
+              <div class="site">
+                <a href="https://github.com/kallolpandit/Pack-Go" target="_blank">Live Site</a>
+                <a href="https://kallolpandit.github.io/Pack-Go/" target="_blank">Source Code</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="project_items">
+            <img src="images/Sass.png" alt="Sass">
+            <div class="project_text">
+              <h4>Fresh Fashion</h4>
+              <ul>
+                <li>HTML</li>
+                <li>SASS</li>
+                <li>jQuery</li>
+                <li>BootStarp</li>
+                <li>JavaScript</li>
+              </ul>
+              <h5>Details</h5>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat eaque velit nobis architecto maiores beatae, sunt exercitationem reprehenderit voluptate placeat?</p>
+              <div class="site">
+                <a href="https://kallolpandit.github.io/Fashion-Website/" target="_blank">Live Site</a>
+                <a href="https://github.com/kallolpandit/Fashion-Website" target="_blank">Source Code</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="project_items">
+            <img src="images/Digital Agency.png" alt="Avada Project">
+            <div class="project_text">
+              <h4>Digital Agency</h4>
+              <ul>
+                <li>HTML</li>
+                <li>Tailwind CSS</li>
+                <li>React js</li>
+                <li>JavaScript</li>
+              </ul>
+              <h5>Details</h5>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat eaque velit nobis architecto maiores beatae, sunt exercitationem reprehenderit voluptate placeat?</p>
+              <div class="site">
+                <a href="https://github.com/kallolpandit/Digital-Agency" target="_blank">Live Site</a>
+                <a href="https://github.com/kallolpandit/Digital-Agency" target="_blank">Source Code</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
