recent project added

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
        Freelance Part End
 ================================= -->
 
-<!-- =============================
+  <!-- =============================
        Service Part Start
   =============================== -->
   <section id="service">
@@ -287,7 +287,7 @@
       </div>
       <div class="row">
         <div class="col-lg-4">
-          <div class="project_items">
+          <div class="project_items" data-aos="fade-up" data-aos-duration="1000">
             <img src="images/Pack & Go.png" alt="Pack & Go">
             <div class="project_text">
               <h4>Pack & Go</h4>
@@ -299,7 +299,8 @@
                 <li>JavaScript</li>
               </ul>
               <h5>Details</h5>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat eaque velit nobis architecto maiores beatae, sunt exercitationem reprehenderit voluptate placeat?</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat eaque velit nobis architecto maiores
+                beatae, sunt exercitationem reprehenderit voluptate placeat?</p>
               <div class="site">
                 <a href="https://github.com/kallolpandit/Pack-Go" target="_blank">Live Site</a>
                 <a href="https://kallolpandit.github.io/Pack-Go/" target="_blank">Source Code</a>
@@ -308,7 +309,7 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <div class="project_items">
+          <div class="project_items" data-aos="fade-up" data-aos-duration="1000">
             <img src="images/Sass.png" alt="Sass">
             <div class="project_text">
               <h4>Fresh Fashion</h4>
@@ -320,7 +321,8 @@
                 <li>JavaScript</li>
               </ul>
               <h5>Details</h5>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat eaque velit nobis architecto maiores beatae, sunt exercitationem reprehenderit voluptate placeat?</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat eaque velit nobis architecto maiores
+                beatae, sunt exercitationem reprehenderit voluptate placeat?</p>
               <div class="site">
                 <a href="https://kallolpandit.github.io/Fashion-Website/" target="_blank">Live Site</a>
                 <a href="https://github.com/kallolpandit/Fashion-Website" target="_blank">Source Code</a>
@@ -329,7 +331,7 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <div class="project_items">
+          <div class="project_items" data-aos="fade-up" data-aos-duration="1000">
             <img src="images/Digital Agency.png" alt="Avada Project">
             <div class="project_text">
               <h4>Digital Agency</h4>
@@ -340,7 +342,8 @@
                 <li>JavaScript</li>
               </ul>
               <h5>Details</h5>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat eaque velit nobis architecto maiores beatae, sunt exercitationem reprehenderit voluptate placeat?</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat eaque velit nobis architecto maiores
+                beatae, sunt exercitationem reprehenderit voluptate placeat?</p>
               <div class="site">
                 <a href="https://github.com/kallolpandit/Digital-Agency" target="_blank">Live Site</a>
                 <a href="https://github.com/kallolpandit/Digital-Agency" target="_blank">Source Code</a>
@@ -352,7 +355,7 @@
     </div>
   </section>
 
-<!-- =============================
+  <!-- =============================
        Service Part End
   =============================== -->
 
@@ -406,8 +409,8 @@
   <footer id="footer">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12" >
-          <div class="footer_text" >
+        <div class="col-lg-12">
+          <div class="footer_text">
             <div class="logo">
               <a href="#">Kallol.</a>
             </div>
