--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="css/responsive.css">
 </head>
 
-<body class="tutorial">
+<body class="tutorial" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example " tabindex="0">
   <!-- =========Mouse Move=========== -->
   <main class="page">
     <div class="page__inner">
