service part updated

--- a/index.html
+++ b/index.html
@@ -315,12 +315,12 @@
         </div>
         <div class="col-lg-4">
           <div class="project_items" data-aos="fade-up" data-aos-duration="2000">
-            <img src="images/Sass.png" alt="Sass">
+            <img src="images/Happy Coaching.png" alt="Happy Coaching">
             <div class="project_text">
-              <h4>Fresh Fashion</h4>
+              <h4>Happy Coaching</h4>
               <ul>
                 <li>HTML</li>
-                <li>SASS</li>
+                <li>CSS</li>
                 <li>jQuery</li>
                 <li>BootStarp</li>
                 <li>JavaScript</li>
