--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat eaque velit nobis architecto maiores
                 beatae, sunt exercitationem reprehenderit voluptate placeat?</p>
               <div class="site">
-                <a href="https://kallolpandit.github.io/Fashion-Website/" target="_blank">Live Site</a>
-                <a href="https://github.com/kallolpandit/Fashion-Website" target="_blank">Source Code</a>
+                <a href="https://kallolpandit.github.io/Happy-Coaching/" target="_blank">Live Site</a>
+                <a href="https://github.com/kallolpandit/Happy-Coaching" target="_blank">Source Code</a>
               </div>
             </div>
           </div>
